make sure again that the price line is not bleeding above it's area

--- a/skin/frontend/wsu_base/connections.store.wsu.edu/css/custom.css
+++ b/skin/frontend/wsu_base/connections.store.wsu.edu/css/custom.css
@@ -1224,6 +1224,7 @@ ul.products-list ul.add-to-links:after {
 	color: #5a5a5a;
 	font-size: 28px;
     font-weight: 500;
+	line-height: 28px;
 }
 .products-grid .price-box .old-price .price{
     color: #5a5a5a;
